--- a/RayTracer/RayTracer/makefile
+++ b/RayTracer/RayTracer/makefile
@@ -1,5 +1,5 @@
 CC=g++
-CFLAGS= -std=c++14 -O3
+CFLAGS= -std=c++14 -pthread -O3
 DEPS = Ray.hpp bvh.hpp stb_image_write.h ./glm/glm/glm.hpp ./glm/glm/gtx/io.hpp
 OBJ = Ray.o bvh.o main.o
 
